# blazekv

./: .clang-format  .clangd  .dockerignore  .editorconfig  .gitignore  CMakeLists.txt  Dockerfile  README.md  blazekv.conf
.github/workflows/: benchmark.yml  ci.yml  docker.yml
bench/: CMakeLists.txt  microbench.cpp  plot_results.py  run_benchmark.sh
bench/results/: results.json
cmake/: build_config.hpp.in
dashboard/: Dockerfile  README.md  index.html  nginx.conf.template  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
dashboard/src/: App.tsx  index.css  main.tsx  types.ts
dashboard/src/components/: Card.tsx  ChartTooltip.tsx  HeaderStats.tsx  KpiRow.tsx  KpiTile.tsx  Pill.tsx  QueryConsole.tsx  ShardPanel.tsx  Sparkline.tsx  StatusDot.tsx  TimeSeriesCharts.tsx  Wordmark.tsx
dashboard/src/hooks/: useStats.ts
dashboard/src/lib/: api.ts  format.ts  mock.ts
deploy/docker/: docker-compose.yml  prometheus.yml
deploy/k8s/: dashboard.yaml  namespace.yaml  service.yaml  servicemonitor.yaml  statefulset.yaml
docs/: DESIGN.md  architecture.excalidraw
include/blazekv/: arena.hpp  command.hpp  common.hpp  config.hpp  hash.hpp  hnsw.hpp  hyperloglog.hpp  keyspace.hpp  metrics.hpp  mpsc.hpp  object.hpp  persist.hpp  reactor.hpp  resp.hpp  server.hpp  shard.hpp  skiplist.hpp  socket.hpp  swiss_table.hpp
scripts/: render_excalidraw_png.py
src/: CMakeLists.txt
src/commands/: generic_cmds.cpp  hash_cmds.cpp  list_cmds.cpp  registry.cpp  server_cmds.cpp  set_cmds.cpp  string_cmds.cpp  vector_cmds.cpp  zset_cmds.cpp
src/metrics/: metrics.cpp
src/net/: reactor.cpp  socket.cpp
src/persist/: aof.cpp  snapshot.cpp
src/proto/: resp.cpp
src/server/: config.cpp  main.cpp  server.cpp  shard.cpp
src/store/: hyperloglog.cpp  keyspace.cpp  object.cpp
src/vector/: hnsw.cpp
tests/: CMakeLists.txt  test_arena.cpp  test_hnsw.cpp  test_hyperloglog.cpp  test_integration.cpp  test_keyspace.cpp  test_resp.cpp  test_skiplist.cpp  test_swiss_table.cpp
